--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+
+.target
+/.settings
+.idea
+*.iml
+.DS_Store
+.project
+.springBeans
 # Compiled class file
 *.class
 
@@ -21,3 +29,4 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/.DS_Store
